# astral-ocean

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  install.sh
include/ao/core/exception/: exception.h  expiration_exception.hpp  file_not_found.h  index_out_of_range.h
include/ao/core/logger/: logger.h  logger_instance.hpp
include/ao/core/logging/: log.h
include/ao/core/memory/: container.hpp  iterable_container.hpp  map_container.hpp  ptr_iterator.hpp
include/ao/vulkan/: engine.h
psds/: logo.psd
src/main/: CMakeLists.txt
src/main/bootstrap/: CMakeLists.txt  main.cpp
src/main/core/: CMakeLists.txt  exception.cpp  exception.h  logger.cpp  logger.h  plugin.h  plugin.hpp
src/main/core/exception/: exception.cpp  exception.h  expiration_exception.hpp  file_not_found.cpp  index_out_of_range.cpp  index_out_of_range.h
src/main/core/logger/: logger.cpp  logger.h  logger_instance.hpp  proxy_logger.cpp  proxy_logger.h  proxy_logger.hpp
src/main/core/logging/: log.cpp  log.h
src/main/core/memory/: container.hpp  dynamic_ptr.hpp  iterable_container.hpp  map_container.hpp  ptr_iterator.hpp
src/main/core/threading/: future.hpp  thread_pool.cpp  thread_pool.h
src/main/core/utilities/: memory.h  pointers.h  types.h
src/main/vulkan/: CMakeLists.txt  ao_device.cpp  ao_device.h  ao_engine.cpp  ao_engine.h  ao_pipeline.cpp  ao_pipeline.h  ao_shadermodule.cpp  ao_shadermodule.h  ao_swapchain.cpp  ao_swapchain.h  engine.cpp  engine.h  engine_settings.h  glfw_engine.cpp  glfw_engine.h  glfw_utilities.h  utilities.h  vk_enums.h  vk_utilities.h
src/main/vulkan/buffer/: buffer.cpp  buffer.h  staging_buffer.cpp  staging_buffer.h
src/main/vulkan/buffer/array/: basic_buffer.hpp  buffer.hpp  staging_buffer.hpp
src/main/vulkan/buffer/tuple/: basic_buffer.hpp  buffer.hpp  staging_buffer.hpp
src/main/vulkan/container/: pipeline_container.cpp  pipeline_container.h  queue_container.cpp  queue_container.h  semaphore_container.cpp  semaphore_container.h
src/main/vulkan/engine/: ao_engine.cpp  ao_engine.h  engine.cpp  engine.h  glfw_engine.cpp  glfw_engine.h  settings.cpp  settings.h
src/main/vulkan/engine/container/: pipeline_container.cpp  queue_container.cpp  queue_container.h
src/main/vulkan/engine/containers/: commandbuffer_container.cpp  commandbuffer_container.h  queue_container.cpp  queue_container.h  semaphore_container.cpp  semaphore_container.h
src/main/vulkan/engine/exception/: buffer_unitialized.h
src/main/vulkan/engine/plugins/: fps_plugin.cpp  fps_plugin.h  title_fps_plugin.cpp  title_fps_plugin.h
src/main/vulkan/engine/wrapper/: device.cpp  device.h  pipeline.h  shader_module.cpp  shader_module.h  swapchain.cpp  swapchain.h
src/main/vulkan/engine/wrapper/buffer/: staging_buffer.cpp  staging_buffer.h
src/main/vulkan/engine/wrapper/buffer/array/: buffer.hpp  staging_buffer.hpp
src/main/vulkan/engine/wrapper/buffer/tuple/: basic_buffer.hpp  buffer.hpp  staging_buffer.hpp
src/main/vulkan/engine/wrapper/pipeline/: descriptor_pool.cpp  descriptor_pool.h  graphics_pipeline.cpp  pipeline.cpp  pipeline_layout.cpp
src/main/vulkan/engine/wrappers/: buffer.hpp  command_pool.cpp  device.cpp  device.h  pipeline.cpp  pipeline.h  shadermodule.cpp  shadermodule.h  swapchain.cpp  swapchain.h
src/main/vulkan/engine/wrappers/buffers/: basic_buffer.hpp  buffer.cpp  buffer.h  buffer.hpp  device_buffer.hpp  staging_buffer.cpp  staging_buffer.h  staging_buffer.hpp  tuple_buffer.hpp
src/main/vulkan/engine/wrappers/buffers/array/: basic_buffer.hpp  buffer.hpp  staging_buffer.hpp
src/main/vulkan/engine/wrappers/buffers/tuple/: basic_buffer.hpp  buffer.hpp  staging_buffer.hpp
src/main/vulkan/exception/: buffer_unitialized.h  unknown_allocation.h
src/main/vulkan/memory/: array.hpp  buffer.cpp  buffer.h  tuple.hpp  vector.hpp
src/main/vulkan/memory/allocator/: allocator.h  device_allocator.cpp  device_allocator.h  host_allocator.cpp  host_allocator.h
src/main/vulkan/pipeline/: compute_pipeline.cpp  compute_pipeline.h  descriptor_pool.cpp  descriptor_pool.h  graphics_pipeline.cpp  graphics_pipeline.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h
src/main/vulkan/plugins/: fps_plugin.cpp  fps_plugin.h  title_fps_plugin.cpp  title_fps_plugin.h
src/main/vulkan/utilities/: glfw.h  queue.h  settings.cpp  settings.h  vulkan.h
src/main/vulkan/wrapper/: command_pool.cpp  command_pool.h  device.cpp  device.h  fence.cpp  fence.h  shader_module.cpp  shader_module.h  swapchain.cpp  swapchain.h
src/main/vulkan/wrapper/buffer/: buffer.cpp  buffer.h  staging_buffer.cpp  staging_buffer.h
src/main/vulkan/wrapper/buffer/array/: basic_buffer.hpp  buffer.hpp
src/main/vulkan/wrapper/buffer/tuple/: basic_buffer.hpp  staging_buffer.hpp
src/main/vulkan/wrapper/pipeline/: descriptor_pool.cpp  descriptor_pool.h  graphics_pipeline.cpp  graphics_pipeline.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h
src/main/win-bootstrap/: CMakeLists.txt  RectangleDemo.cpp  RectangleDemo.h  TextureDemo.cpp  TextureDemo.h  TriangleDemo.cpp  TriangleDemo.h  glfw_engine.cpp  glfw_engine.h  main.cpp  vertex.hpp
src/main/win-bootstrap/demo/: RectangleDemo.cpp  RectangleDemo.h  TextureDemo.cpp  TextureDemo.h  TriangleDemo.cpp  TriangleDemo.h
src/main/win-bootstrap/helpers/: glfw_engine.cpp  glfw_engine.h
src/test/: CMakeLists.txt
src/test/core/: exception.cpp
src/tests/: CMakeLists.txt
src/tests/core/: dynamic_ptr.cpp  exception.cpp  future.cpp  hpp_compilation.cpp  map_container.cpp  pointers.cpp  thread_pool.cpp  types.cpp
src/tests/helpers/: tests.h  vk_array_buffers.hpp  vk_buffers.hpp  vk_instance.hpp  vk_tuple_buffers.hpp
src/tests/vulkan/: allocator.cpp  array.cpp  array_buffer.cpp  fence.cpp  settings.cpp  tuple.cpp  tuple_buffer.cpp  utilities.cpp  vector.cpp
submodules/vulkan/: vulkan.h  vulkan_core.h
tools/: install.sh  run-tests.sh
tools/travis/linux/: build.sh  install.sh
tools/travis/linux-clang/: install.sh
tools/travis/macOS/: build.sh  install.sh
(+72 files in other folders)
